2005-03-30  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (write_field): Emit field value.
	(generate): Change initialization of current_flags.
	(write_method): Correctly handle constructors of
	member classes.
	(write_namespaces): Correctly handle member class names.

2005-03-30  Tom Tromey  <tromey@redhat.com>

	* header/cni.hh (cni_code_generator::write_field): Updated.
	(cni_code_generator::keyword_p): Declare.
	* header/cni.cc (keywords): New global.
	(NUM_KEYWORDS): New define.
	(keyword_p): New method.
	(generate): Compute method names.
	(write_field): Added 'method_names' arguments.  Handle C++ keyword
	clash.
	(write_method): Handle C++ keyword clash.  Skip synthetic
	methods.
	* header/cni.cc (write_method): Mark more methods as virtual.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::get_byte_count): New
	method.
	* bytecode/locals.cc (update): Changed assertion.
	(emit): Handle case where 'end' is NULL.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::help_options): Document
	-nostdheaders.
	(argument_parser::parse_args): Handle -nostdheaders.
	* header/cni.cc (cni_code_generator): Initialize new field.
	(generate): Handle new field.
	* header/cni.hh (cni_code_generator::std_headers_ok): New field.
	(cni_code_generator::set_avoid_headers): New method.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* main.cc: Don't use backquote.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::action_class): New field.
	(argument_parser::cni_generator): Likewise.
	(argument_parser): Initialize new field.
	(argument_parser::need_cni_generator): New method.
	(argument_parser::need_cni_class): Likewise.
	(argument_parser::parse_args): Set cni_generator.  Recognize new
	arguments.
	(argument_parser::help_options): Document new options.
	* header/cni.hh (cni_code_generator::write_field): Updated.
	(cni_code_generator::action): New enum.